Bugfix: Properly handle flags in SVG path

We treated flags ("0" | "1") in elliptical path data as coords, which
isn't correct.

BUG:447417
(cherry picked from commit 36654c666907bc59e12e9c6421c8285e2d9bf5fd)