libs/flake/tests/TestSvgParser.cpp
@@ -3479,6 +3479,27 @@ void TestSvgParser::testPathShape()
     t.test_standard_30px_72ppi("polygon", false);
 }
 
+void TestSvgParser::testPathShapeEllipticalArc()
+{
+    const QString data =
+        "<svg width=\"100px\" height=\"100px\""
+        "   xmlns=\"http://www.w3.org/2000/svg\" version=\"1.1\">"
+        ""
+        "  <path"
+        "     d=\"M 0.12808856,29.836374 3.4329535,27.237679"
+        "        a 1.8474812,2.9054325 0 013.3048758,-2.598695 l 3.3048637,-2.598687"
+        "        a 5.4242101,1.9738467 73.492263 0,1,3.304876,-2.598694 l 3.304865,-2.598696"
+        "        A 8.0718175,1.9886167 71.359615,0119.9573,14.244222 l 3.304873,-2.598695"
+        "        a 10.73523,1.9933048 70.675722   0  1 3.304865,-2.5986956 l 3.304876,-2.598694\""
+        "     fill=\"none\" stroke=\"#ff0000\" stroke-width=\"0.414447\""
+        "     transform=\"scale(3, 3)\""
+        "     id=\"testRect\" />"
+        "</svg>";
+
+    SvgRenderTester t (data);
+    t.test_standard("elliptical_arc", QSize(100, 100), 72);
+}
+
 void TestSvgParser::testDefsHidden()
 {
     const QString data =
